--- a/index.html
+++ b/index.html
@@ -1,230 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raheja Jewellers</title>
-
-    <style>
-        body {
-            margin: 0;
-            font-family: "Georgia", serif;
-            background-color: #ffffff;
-            color: #222;
-            line-height: 1.6;
-        }
-
-        header {
-            background-color: #111;
-            color: gold;
-            padding: 25px 10%;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 36px;
-        }
-
-        header p {
-            margin-top: 8px;
-            font-size: 16px;
-            color: #ddd;
-        }
-
-        section {
-            padding: 50px 10%;
-        }
-
-        .hero {
-            text-align: center;
-            background: #f8f8f8;
-        }
-
-        .hero h2 {
-            font-size: 30px;
-            color: #000;
-        }
-
-        .hero p {
-            max-width: 700px;
-            margin: 15px auto;
-            color: #555;
-        }
-
-        .btn {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 22px;
-            background-color: gold;
-            color: #000;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 4px;
-        }
-
-        .section-title {
-            text-align: center;
-            font-size: 26px;
-            margin-bottom: 30px;
-            color: #000;
-        }
-
-        .cards {
-            display: flex;
-            gap: 25px;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .card {
-            border: 1px solid #ddd;
-            padding: 20px;
-            width: 260px;
-            text-align: center;
-            background: #fff;
-        }
-
-        .card h3 {
-            color: #000;
-            margin-bottom: 10px;
-        }
-
-        .card p {
-            color: #555;
-            font-size: 15px;
-        }
-
-        .about {
-            background-color: #f8f8f8;
-            text-align: center;
-        }
-
-        .about p {
-            max-width: 800px;
-            margin: auto;
-            color: #555;
-        }
-
-        .testimonials {
-            text-align: center;
-        }
-
-        .testimonial {
-            max-width: 700px;
-            margin: auto;
-            font-style: italic;
-            color: #444;
-        }
-
-        .contact {
-            background-color: #111;
-            color: #eee;
-            text-align: center;
-        }
-
-        .contact p {
-            margin: 8px 0;
-        }
-
-        footer {
-            background-color: #000;
-            color: #aaa;
-            text-align: center;
-            padding: 15px;
-            font-size: 14px;
-        }
-
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 28px;
-            }
-            .hero h2 {
-                font-size: 24px;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Raheja Jewellers</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <header>
-        <h1>Raheja Jewellers</h1>
-        <p>Where Tradition Meets Elegance</p>
-    </header>
+<header>
+  <h1>Raheja Jewellers</h1>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#collections">Collections</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
 
-    <section class="hero">
-        <h2>Timeless Jewellery, Trusted Craftsmanship</h2>
-        <p>
-            Raheja Jewellers is a name built on trust, purity, and fine craftsmanship,
-            offering premium gold and diamond jewellery designed to last generations.
-        </p>
-        <a href="#collections" class="btn">Explore Collections</a>
-    </section>
+<section id="home" class="hero">
+  <h2>Where Tradition Meets Elegance</h2>
+  <p>Premium gold and diamond jewellery crafted with trust and purity.</p>
+  <button id="exploreBtn">Explore Collections</button>
+</section>
 
-    <section id="collections">
-        <h2 class="section-title">Our Collections</h2>
-        <div class="cards">
-            <div class="card">
-                <h3>Gold Jewellery</h3>
-                <p>Elegant and pure gold designs crafted with precision and tradition.</p>
-            </div>
-            <div class="card">
-                <h3>Diamond Jewellery</h3>
-                <p>Certified diamonds blended with modern and classic styles.</p>
-            </div>
-            <div class="card">
-                <h3>Bridal Collection</h3>
-                <p>Exclusive bridal jewellery designed for timeless celebrations.</p>
-            </div>
-        </div>
-    </section>
+<section id="collections">
+  <h2>Our Collections</h2>
+  <div class="cards">
+    <div class="card">Gold Jewellery</div>
+    <div class="card">Diamond Jewellery</div>
+    <div class="card">Bridal Collection</div>
+  </div>
+</section>
 
-    <section>
-        <h2 class="section-title">Our Services</h2>
-        <div class="cards">
-            <div class="card">
-                <h3>Custom Designs</h3>
-                <p>Personalized jewellery created to match your vision.</p>
-            </div>
-            <div class="card">
-                <h3>Purity Assurance</h3>
-                <p>Hallmarked and certified jewellery you can trust.</p>
-            </div>
-            <div class="card">
-                <h3>Repair & Care</h3>
-                <p>Professional jewellery repair and polishing services.</p>
-            </div>
-        </div>
-    </section>
+<section id="about" class="light">
+  <h2>About Us</h2>
+  <p>
+    Raheja Jewellers is built on generations of trust, offering
+    certified jewellery with unmatched craftsmanship.
+  </p>
+</section>
 
-    <section class="about">
-        <h2 class="section-title">About Us</h2>
-        <p>
-            Raheja Jewellers stands for honesty, quality, and long-lasting relationships.
-            With years of experience in fine jewellery, we are committed to offering
-            authentic designs and transparent pricing to our customers.
-        </p>
-    </section>
+<section id="testimonials">
+  <h2>Customer Testimonials</h2>
+  <p id="testimonialText"></p>
+</section>
 
-    <section class="testimonials">
-        <h2 class="section-title">What Our Customers Say</h2>
-        <p class="testimonial">
-            “Raheja Jewellers delivers exceptional quality and genuine service.
-            A brand we trust for every special occasion.”
-        </p>
-    </section>
+<section id="contact" class="dark">
+  <h2>Contact Us</h2>
+  <form id="contactForm">
+    <input type="text" id="name" placeholder="Your Name">
+    <input type="email" id="email" placeholder="Your Email">
+    <textarea id="message" placeholder="Your Message"></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+  <p id="formStatus"></p>
+</section>
 
-    <section class="contact">
-        <h2 class="section-title">Contact Us</h2>
-        <p><strong>Address:</strong> 129 jawahar market Sri Ganganagar rajasthan</p>
-        <p><strong>Phone:</strong> +91 9460689962 </p>
-        <p><strong>Email:</strong> info@rahejajewellers.com</p>
-    </section>
+<button id="topBtn">↑</button>
 
-    <footer>
-        © 2026 Raheja Jewellers. All Rights Reserved.
-    </footer>
+<footer>
+  © 2026 Raheja Jewellers. All Rights Reserved.
+</footer>
 
+<script src="script.js"></script>
 </body>
 </html>
