--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 <footer>
   © 2026 Raheja Jewellers. All Rights Reserved.
+    Raheja94606@gmail.con
 </footer>
 
 <script src="script.js"></script>
