--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="cards">
     <div class="card">Gold Jewellery</div>
     <div class="card">Diamond Jewellery</div>
-    <div class="card">Bridal Collection</div>
+    <div class="card">Silver jewellery</div>
   </div>
 </section>
 
