--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- BRAND HEADER -->
 <header class="brand-header">
   <div class="brand-container">
-    <img src="images/logo.png" alt="Raheja Jewellers Logo">
+    <img src="images/Logo .png" alt="Raheja Jewellers Logo">
     <h1>Raheja Jewellers</h1>
   </div>
 </header>
