Update product buttons to use placeholder images

--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
                     <div class="product-image-wrapper">
                         <img src="images/catalogue/gold1.jpg" alt="Gold Jewellery" class="product-image">
                         <div class="product-overlay">
-                            <button class="view-button" onclick="openImagePopup('images/catalogue/gold1.png', 'Gold Jewellery')">View Details</button>
+                            <button class="view-button" onclick="openImagePopup('images/catalogue/gold1-placeholder.svg', 'Gold Jewellery')">View Details</button>
                         </div>
                     </div>
                     <div class="product-info">
                         <h3 class="product-title">Gold Jewellery</h3>
                         <p class="product-description">Exquisite 22K gold designs that capture timeless beauty</p>
+                        <button class="mobile-view-button" onclick="openImagePopup('images/catalogue/gold1-placeholder.svg', 'Gold Jewellery')">View Details</button>
                     </div>
                 </div>
 
@@ -70,6 +71,7 @@
                     <div class="product-info">
                         <h3 class="product-title">Traditional Gold</h3>
                         <p class="product-description">Heritage designs with contemporary elegance</p>
+                        <button class="mobile-view-button" onclick="openImagePopup('images/catalogue/gold2-placeholder.svg', 'Traditional Gold')">View Details</button>
                     </div>
                 </div>
 
@@ -83,6 +85,7 @@
                     <div class="product-info">
                         <h3 class="product-title">Diamond Jewellery</h3>
                         <p class="product-description">Brilliant diamonds set in stunning designs</p>
+                        <button class="mobile-view-button" onclick="openImagePopup('images/catalogue/diamond1-placeholder.svg', 'Diamond Jewellery')">View Details</button>
                     </div>
                 </div>
             </div>
