Update logo, contact details, and add map widget
Updated image sources and contact information, added Google Maps widget.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="header">
         <div class="container header-content">
             <div class="brand">
-                <img src="images/Logo .png" alt="Raheja Jewellers Logo" class="logo">
+                <img src="images/logo-placeholder.svg" alt="Raheja Jewellers Logo" class="logo">
                 <h1 class="brand-name">Raheja Jewellers</h1>
             </div>
             <nav id="nav">
@@ -49,7 +49,7 @@
             <div class="catalogue-grid">
                 <div class="product-card reveal">
                     <div class="product-image-wrapper">
-                        <img src="images/catalogue/gold1.jpg" alt="Gold Jewellery" class="product-image">
+                        <img src="images/catalogue/gold1-placeholder.svg" alt="Gold Jewellery" class="product-image">
                         <div class="product-overlay">
                             <button class="view-button" onclick="openImagePopup('images/catalogue/gold1-placeholder.svg', 'Gold Jewellery')">View Details</button>
                         </div>
@@ -63,7 +63,7 @@
 
                 <div class="product-card reveal">
                     <div class="product-image-wrapper">
-                        <img src="images/catalogue/gold2.jpg" alt="Traditional Gold" class="product-image">
+                        <img src="images/catalogue/gold2-placeholder.svg" alt="Traditional Gold" class="product-image">
                         <div class="product-overlay">
                             <button class="view-button" onclick="openImagePopup('images/catalogue/gold2-placeholder.svg', 'Traditional Gold')">View Details</button>
                         </div>
@@ -77,7 +77,7 @@
 
                 <div class="product-card reveal">
                     <div class="product-image-wrapper">
-                        <img src="images/catalogue/diamond1.jpg" alt="Diamond Jewellery" class="product-image">
+                        <img src="images/catalogue/diamond1-placeholder.svg" alt="Diamond Jewellery" class="product-image">
                         <div class="product-overlay">
                             <button class="view-button" onclick="openImagePopup('images/catalogue/diamond1-placeholder.svg', 'Diamond Jewellery')">View Details</button>
                         </div>
@@ -108,19 +108,45 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title reveal">Visit Us</h2>
-            <div class="contact-content reveal">
+            <div class="contact-grid reveal">
                 <div class="contact-info">
                     <div class="contact-item">
                         <h3>Address</h3>
-                        <p>129 jawahar market , near railway station<br>Sri Ganganagar, Rajasthan, India</p>
+                        <p>123 Jewellery Plaza, Main Market<br>Sri Ganganagar, Rajasthan, India</p>
                     </div>
                     <div class="contact-item">
                         <h3>Phone</h3>
-                        <p>+91 9460689962 </p>
+                        <p>+91 123 456 7890</p>
                     </div>
                     <div class="contact-item">
                         <h3>Hours</h3>
                         <p>Monday - Saturday: 10:00 AM - 8:00 PM<br>Sunday: 11:00 AM - 6:00 PM</p>
+                    </div>
+                </div>
+                
+                <!-- Google Maps Widget -->
+                <div class="map-container reveal">
+                    <div class="map-wrapper">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d110191.98417276158!2d73.80195857910156!3d29.903663000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3917b3c6fb8f7b5d%3A0x7d6ef0e0b0c6b8f8!2sSri%20Ganganagar%2C%20Rajasthan!5e0!3m2!1sen!2sin!4v1707334890123!5m2!1sen!2sin"
+                            width="100%" 
+                            height="400" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade"
+                            title="Raheja Jewellers Location">
+                        </iframe>
+                        <a href="https://www.google.com/maps/search/jewellery+shops+near+sri+ganganagar" 
+                           target="_blank" 
+                           class="map-link"
+                           aria-label="Open in Google Maps">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                                <circle cx="12" cy="10" r="3"></circle>
+                            </svg>
+                            Open in Google Maps
+                        </a>
                     </div>
                 </div>
             </div>
@@ -130,7 +156,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2026 Raheja Jewellers. All rights reserved.</p>
+            <p>&copy; 2024 Raheja Jewellers. All rights reserved.</p>
             <p>Crafting Excellence Since Generations</p>
         </div>
     </footer>
