--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="map-container reveal">
                     <div class="map-wrapper">
                         <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d216.65574656843253!2d73.8740205304675!3d29.93112039526567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3917b50ed63a01d9%3A0x52da86c7135c09b3!2s130%2C%20Jawahar%20Market%20Rd%2C%20Old%20Dhan%20Mandi%2C%20Sri%20Ganganagar%2C%20Rajasthan%20335001!5e0!3m2!1sen!2sin!4v1770490816195!5m2!1sen!2sin" 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d205.8932312797572!2d73.8741611675913!3d29.931172328973776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3917b50073c7b483%3A0x81544cab56904058!2sRaheja%20jewellers!5e1!3m2!1sen!2sin!4v1770529061016!5m2!1sen!2sin" 
                             width="100%" 
                             height="400" 
                             style="border:0;" 
