--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="header">
         <div class="container header-content">
             <div class="brand">
-                <img src="images/logo-placeholder.svg" alt="Raheja Jewellers Logo" class="logo">
+                <img src="images/Logo .png" alt="Raheja Jewellers Logo" class="logo">
                 <h1 class="brand-name">Raheja Jewellers</h1>
             </div>
             <nav id="nav">
@@ -49,43 +49,43 @@
             <div class="catalogue-grid">
                 <div class="product-card reveal">
                     <div class="product-image-wrapper">
-                        <img src="images/catalogue/gold1-placeholder.svg" alt="Gold Jewellery" class="product-image">
+                        <img src="images/catalogue/gold1.jpg" alt="Gold Jewellery" class="product-image">
                         <div class="product-overlay">
-                            <button class="view-button" onclick="openImagePopup('images/catalogue/gold1-placeholder.svg', 'Gold Jewellery')">View Details</button>
+                            <button class="view-button" onclick="openImagePopup('images/catalogue/gold1.jpg', 'Gold Jewellery')">View Details</button>
                         </div>
                     </div>
                     <div class="product-info">
                         <h3 class="product-title">Gold Jewellery</h3>
                         <p class="product-description">Exquisite 22K gold designs that capture timeless beauty</p>
-                        <button class="mobile-view-button" onclick="openImagePopup('images/catalogue/gold1-placeholder.svg', 'Gold Jewellery')">View Details</button>
+                        <button class="mobile-view-button" onclick="openImagePopup('images/catalogue/gold1.jpg', 'Gold Jewellery')">View Details</button>
                     </div>
                 </div>
 
                 <div class="product-card reveal">
                     <div class="product-image-wrapper">
-                        <img src="images/catalogue/gold2-placeholder.svg" alt="Traditional Gold" class="product-image">
+                        <img src="images/catalogue/gold2.jpg" alt="Traditional Gold" class="product-image">
                         <div class="product-overlay">
-                            <button class="view-button" onclick="openImagePopup('images/catalogue/gold2-placeholder.svg', 'Traditional Gold')">View Details</button>
+                            <button class="view-button" onclick="openImagePopup('images/catalogue/gold2.jpg', 'Traditional Gold')">View Details</button>
                         </div>
                     </div>
                     <div class="product-info">
                         <h3 class="product-title">Traditional Gold</h3>
                         <p class="product-description">Heritage designs with contemporary elegance</p>
-                        <button class="mobile-view-button" onclick="openImagePopup('images/catalogue/gold2-placeholder.svg', 'Traditional Gold')">View Details</button>
+                        <button class="mobile-view-button" onclick="openImagePopup('images/catalogue/gold2.jpg', 'Traditional Gold')">View Details</button>
                     </div>
                 </div>
 
                 <div class="product-card reveal">
                     <div class="product-image-wrapper">
-                        <img src="images/catalogue/diamond1-placeholder.svg" alt="Diamond Jewellery" class="product-image">
+                        <img src="images/catalogue/diamond1.jpg" alt="Diamond Jewellery" class="product-image">
                         <div class="product-overlay">
-                            <button class="view-button" onclick="openImagePopup('images/catalogue/diamond1-placeholder.svg', 'Diamond Jewellery')">View Details</button>
+                            <button class="view-button" onclick="openImagePopup('images/catalogue/diamond1.jpg', 'Diamond Jewellery')">View Details</button>
                         </div>
                     </div>
                     <div class="product-info">
                         <h3 class="product-title">Diamond Jewellery</h3>
                         <p class="product-description">Brilliant diamonds set in stunning designs</p>
-                        <button class="mobile-view-button" onclick="openImagePopup('images/catalogue/diamond1-placeholder.svg', 'Diamond Jewellery')">View Details</button>
+                        <button class="mobile-view-button" onclick="openImagePopup('images/catalogue/diamond1.jpg', 'Diamond Jewellery')">View Details</button>
                     </div>
                 </div>
             </div>
