Update Google Maps link in index.html

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             referrerpolicy="no-referrer-when-downgrade"
                             title="Raheja Jewellers Location">
                         </iframe>
-                        <a href="https://www.google.com/maps/search/jewellery+shops+near+sri+ganganagar" 
+                        <a href="https://maps.app.goo.gl/iXgDwJN9pScKNqBx6" 
                            target="_blank" 
                            class="map-link"
                            aria-label="Open in Google Maps">
