Update contact information and footer year

--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <h3>Address</h3>
-                        <p>123 Jewellery Plaza, Main Market<br>Sri Ganganagar, Rajasthan, India</p>
+                        <p>129, Jawahar Market Rd, Old Dhan Mandi <br>Sri Ganganagar, Rajasthan, India</p>
                     </div>
                     <div class="contact-item">
                         <h3>Phone</h3>
-                        <p>+91 123 456 7890</p>
+                        <p>+91 9460689962 </p>
                     </div>
                     <div class="contact-item">
                         <h3>Hours</h3>
-                        <p>Monday - Saturday: 10:00 AM - 8:00 PM<br>Sunday: 11:00 AM - 6:00 PM</p>
+                        <p>Monday - Saturday: 10:00 AM - 9:00 PM<br>Sunday: 11:00 AM - 6:00 PM</p>
                     </div>
                 </div>
                 
@@ -156,7 +156,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Raheja Jewellers. All rights reserved.</p>
+            <p>&copy; 2026 Raheja Jewellers. All rights reserved.</p>
             <p>Crafting Excellence Since Generations</p>
         </div>
     </footer>
